- Updated the respawn time of Krasus's Compendium - Chapter 2.
- Updated the respawn time of Krasus's Compendium - Chapter 3.
- Updated the respawn time of Diagnostic Equipment.

[2022-06-03]
- Added the script for Borean Tundra to make the quest Plug the Sinkholes trigger for every member of a group.
- Updated the respawn time of Fields, Factories and Workshops.
- Updated the respawn time of Wine Crate.
- Added Kaskala Supplies to the loot table of Kvaldir Raider for the quest Preparing for the Worst.
- Updated the flags of Kaskala Supplies to allow every member of a group to loot it.
- Added Crafty's Stuff to the loot table of Magmoth Shaman for the quest Dirty, Stinkin' Snobolds!
- Added Crafty's Stuff to the loot table of Magmoth Forager for the quest Dirty, Stinkin' Snobolds!
- Updated the flags of Crafty's Stuff to allow every member of a group to loot it.

[2022-06-04]
- Added Microfilm to the loot table of Scavenge-bot 005-B6 for the quest Lupus Pupus.
- Updated the flags of Microfilm to allow every member of a group to loot it.
- Updated the smart script for Fizzcrank Recon Pilot to give every member of a group the quest item.
- Updated the smart script for Snowfall Glade Pup to give every member of a group the quest item.

[2022-06-05]
- Updated the smart script for Dead Mage Hunter to give every member of a group the quest item.
- Updated the respawn time of Cedar Chest.
- Added Blackroot Stalk to the loot table of Grizzly Bear for the quest Just Passing Through.
- Updated the flags of Blackroot Stalk to allow every member of a group to loot it.

[2022-06-06]
- Updated the flags of Golem Blueprint Section 1 to allow every member of a group to loot it.
- Updated the flags of Golem Blueprint Section 2 to allow every member of a group to loot it.
- Updated the flags of Golem Blueprint Section 3 to allow every member of a group to loot it.

[2022-06-07]
- Updated the smart script for Primordial Drake Egg to spawn one creature per group member.